Fix border being cut off inline on mobile

--- a/src/components/InlineResults.css
+++ b/src/components/InlineResults.css
@@ -18,7 +18,6 @@
   border-radius: 15px;
   font-size: 14px;
   font-weight: 400;
-  /* background-color: var(--primary-light-3); */
   border: 2px solid var(--primary-light-3);
 }
 
@@ -37,7 +36,7 @@
   display: flex;
   column-gap: 10px;
   overflow-x: auto;
-  padding: 0 2px;
+  padding-left: 2px;
   padding-top: 2px;
   margin-left: -2px;
   padding-bottom: 8px;
@@ -56,6 +55,7 @@
   padding: 8px 12px;
   border-radius: 8px;
   margin-bottom: 5px;
+  margin-right: 2px;
   text-align: center;
   color: var(--text);
   font-family: inherit;
